2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Mono.Addins: Moved to root of project in hopes that it will
	  solve the problem of make distcheck.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/PreferencesDialog.cs: Added a TODO comment about removing
	  ~/.tomboy/manifest.xml.
	* Tomboy/Tomboy.cs: Added code to allow note files to be added/opened
	  from anywhere on the machine (added primarily for the Giver
	  project).

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Makefile.am: Removed trailing whitespace causing build
	  failure.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in, Tomboy.mdp, Tomboy/Addins/Makefile.am,
	  Tomboy/Addins/SshSyncService,
	  Tomboy/Addins/SshSyncService/SshSyncServiceAddin.cs: Initial commit
	  of SshSyncServiceAddin using sshfs.  
	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Account
	  for Ubuntu's `mount` output.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Create a makefile for the FileSystemSyncService Addin.
	* Tomboy.mdp: Added FileSystemSyncServiceAddin.cs.
	* Tomboy/PreferencesDialog.cs: Warn the user about clearing their sync
	  settings before actually doing it.
	* Tomboy/Addins/FileSystemSyncService/FileSystemSyncService.addin.xml,
	  Tomboy/Addins/FileSystemSyncService/FileSystemSyncServiceAddin.cs,
	  Tomboy/Addins/FileSystemSyncService/Makefile.am: New
	  SyncServiceAddin for synchronizing to a local path.
	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Added a
	  TODO item to unmount the FUSE mount.
	* Tomboy/Addins/Makefile.am: Build the FileSystemSyncService
	* Tomboy/Preferences.cs: Changed SYNC_URL -> SYNC_LOCAL_PATH.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Changed
	  WebDav -> WebDAV.

2007-06-28  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Added Tomboy/Addins/WebDavSyncService/Makefile.