@@ -2,9 +2,9 @@
 
 ## Directories
 
-DIR_ADDINS_ADDINS = $(top_builddir)/Tomboy/Mono.Addins/Mono.Addins
-DIR_ADDINS_GUI = $(top_builddir)/Tomboy/Mono.Addins/Mono.Addins.Gui
-DIR_ADDINS_SETUP = $(top_builddir)/Tomboy/Mono.Addins/Mono.Addins.Setup
+DIR_ADDINS_ADDINS = $(top_builddir)/Mono.Addins/Mono.Addins
+DIR_ADDINS_GUI = $(top_builddir)/Mono.Addins/Mono.Addins.Gui
+DIR_ADDINS_SETUP = $(top_builddir)/Mono.Addins/Mono.Addins.Setup
 
 ## Links
 
