@@ -7,6 +7,19 @@ data/GNOME_TomboyApplet.xml
 data/tomboy.desktop.in
 data/tomboy.schemas.in
 libtomboy/gedit-print.c
+Mono.Addins/Mono.Addins.Gui/Mono.Addins.Gui/AddinInfoDialog.cs
+Mono.Addins/Mono.Addins.Gui/Mono.Addins.Gui/AddinInstallDialog.cs
+Mono.Addins/Mono.Addins.Gui/Mono.Addins.Gui/AddinTreeWidget.cs
+Mono.Addins/Mono.Addins.Gui/Mono.Addins.Gui/ManageSitesDialog.cs
+Mono.Addins/Mono.Addins.Gui/Mono.Addins.Gui/Services.cs
+Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.AddinInfoDialog.cs
+Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs
+Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs
+Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.ErrorDialog.cs
+Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs
+Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.NewSiteDialog.cs
+Mono.Addins/Mono.Addins/Mono.Addins.Description/AssemblyDependency.cs
+Mono.Addins/Mono.Addins/Mono.Addins/AddinSessionService.cs
 Tomboy/ActionManager.cs
 Tomboy/AddinManager.cs
 Tomboy/Addins/Backlinks/BacklinksNoteAddin.cs
@@ -15,19 +28,6 @@ Tomboy/Addins/Tasks/TaskManager.cs
 Tomboy/Addins/Tasks/TaskOptionsDialog.cs
 Tomboy/Addins/Tasks/TasksApplicationAddin.cs
 Tomboy/Addins/Tasks/TasksNoteAddin.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/Mono.Addins.Gui/AddinInfoDialog.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/Mono.Addins.Gui/AddinInstallDialog.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/Mono.Addins.Gui/AddinTreeWidget.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/Mono.Addins.Gui/ManageSitesDialog.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/Mono.Addins.Gui/Services.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.AddinInfoDialog.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.ErrorDialog.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs
-Tomboy/Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.NewSiteDialog.cs
-Tomboy/Mono.Addins/Mono.Addins/Mono.Addins.Description/AssemblyDependency.cs
-Tomboy/Mono.Addins/Mono.Addins/Mono.Addins/AddinSessionService.cs
 Tomboy/Applet.cs
 Tomboy/Note.cs
 Tomboy/NoteManager.cs
